--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -28,6 +28,7 @@
                     android:layout_height="140dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="21dp"
+                    android:id="@+id/img1"
                     android:src="@drawable/jahleel" />
 
                 <TextView
