--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -20,6 +20,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="325dp"
+                android:id="@+id/ll"
                 android:background="@drawable/jahleel"
                 android:orientation="vertical">
 
