--- a/app/src/main/res/layout/base_create_post_activity.xml
+++ b/app/src/main/res/layout/base_create_post_activity.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_stub"
+                android:src="@drawable/ic_launcher_foreground"
                 android:focusableInTouchMode="true"
                 android:focusable="true" />
 
