--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -56,14 +56,15 @@
                 android:layout_toStartOf="@+id/authorImageView"
                 android:paddingLeft="@dimen/large_intrinsic_padding"
                 android:paddingRight="@dimen/large_intrinsic_padding"
-                android:textAppearance="@style/TextAppearance.Title"
-                android:layout_alignEnd="@+id/authorImageView" />
+                android:layout_alignEnd="@+id/authorImageView"
+                android:layout_alignParentLeft="true"
+                android:layout_toLeftOf="@+id/authorImageView"
+                android:layout_alignRight="@+id/authorImageView" />
 
             <LinearLayout
                 android:id="@+id/authorContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
                 android:layout_below="@+id/titleTextView"
                 android:layout_marginBottom="@dimen/intrinsic_padding"
                 android:orientation="horizontal"
@@ -75,14 +76,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="@dimen/intrinsic_padding"
-                    android:text="@string/posted_by_label"
-                    android:textAppearance="@style/TextAppearance.Second.Light" />
+                    android:text="@string/posted_by_label"/>
 
                 <TextView
                     android:id="@+id/authorTextView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextAppearance.Highlight" />
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
@@ -104,8 +103,7 @@
                 android:layout_marginBottom="@dimen/large_intrinsic_padding"
                 android:paddingLeft="@dimen/large_intrinsic_padding"
                 android:paddingRight="@dimen/large_intrinsic_padding"
-                android:autoLink="all"
-                android:textAppearance="@style/TextAppearance.Second" />
+                android:autoLink="all" />
 
             <TextView
                 android:id="@+id/commentsLabel"
@@ -127,7 +125,7 @@
                 android:paddingLeft="@dimen/large_intrinsic_padding"
                 android:paddingRight="@dimen/large_intrinsic_padding">
 
-                <android.support.v7.widget.RecyclerView
+                <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/commentsRecyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
