--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -182,7 +182,7 @@
                 <ImageView
                     android:layout_width="36dp"
                     android:layout_height="36dp"
-                    android:src="@drawable/ic_person_add"/>
+                    android:src="@drawable/ic_email_white_18dp"/>
                 <TextView
                     android:textStyle="bold"
                     android:layout_gravity="center_vertical"
@@ -199,7 +199,7 @@
                 <ImageView
                     android:layout_width="36dp"
                     android:layout_height="36dp"
-                    android:src="@drawable/ic_forum"/>
+                    android:src="@drawable/ic_email_white_18dp"/>
                 <TextView
                     android:textStyle="bold"
                     android:layout_gravity="center_vertical"
