--- a/app/src/main/res/layout/activity_follow_posts.xml
+++ b/app/src/main/res/layout/activity_follow_posts.xml
@@ -47,7 +47,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <com.rozdoum.socialcomponents.views.SwipeRefreshPreLollyPop
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipeContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
