--- a/app/src/main/res/layout/comment_list_item.xml
+++ b/app/src/main/res/layout/comment_list_item.xml
@@ -21,7 +21,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/avatarImageView"
         android:paddingLeft="@dimen/large_intrinsic_padding"
         expandableTextView:animAlphaStart="1"
         expandableTextView:animDuration="200"
@@ -34,8 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autoLink="web"
-            android:ellipsize="end"
-            android:textAppearance="@style/TextAppearance.Second" />
+            android:ellipsize="end" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -47,17 +45,14 @@
                 android:id="@+id/dateTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:text="day ago"
-                android:textAppearance="@style/TextAppearance.Second.Light" />
+                android:text="day ago" />
 
             <TextView
                 android:id="@+id/expand_collapse"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
                 android:autoLink="web"
-                android:textAppearance="@style/TextAppearance.Second.Light" />
+                 />
 
         </RelativeLayout>
 
