--- a/app/src/main/res/layout/comment_list_item.xml
+++ b/app/src/main/res/layout/comment_list_item.xml
@@ -56,6 +56,6 @@
 
         </RelativeLayout>
 
-    </com.rozdoum.socialcomponents.views.ExpandableTextView>
+    </com.ms.square.android.expandabletextview.ExpandableTextView>
 
 </RelativeLayout>
