--- a/app/src/main/res/layout/post_item_list_view.xml
+++ b/app/src/main/res/layout/post_item_list_view.xml
@@ -70,8 +70,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/intrinsic_padding"
                 android:layout_marginLeft="@dimen/intrinsic_padding"
-                android:layout_below="@+id/detailsTextView"
-                android:layout_toStartOf="@+id/authorImageView" />
+                android:layout_below="@+id/detailsTextView"/>
 
         </RelativeLayout>
 
