--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -58,6 +58,7 @@
     <dimen name="follow_button_width">100dp</dimen>
     <dimen name="follow_button_height">32dp</dimen>
 
+    <dimen name="logo_w_h">100dp</dimen>
 
     <dimen name="tab_indicator_height">4dp</dimen>
 
