--- a/app/src/main/res/layout/card_popular_persons.xml
+++ b/app/src/main/res/layout/card_popular_persons.xml
@@ -4,6 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:minHeight="150dp"
     app:cardElevation="@dimen/card_itemcourse_elevation"
+    android:background="@color/bg1main"
+
     app:cardBackgroundColor="#FF402D"
     app:cardCornerRadius="16dp"
     android:layout_marginRight="20dp"
