--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,15 @@
     tools:context=".MainActivity"
     android:layout_margin="10dp"
     android:padding="5dp"
+    android:background="@color/bg1main"
+
     android:orientation="horizontal">
 
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         android:orientation="vertical">
 
         <xute.storyview.StoryView
@@ -30,7 +33,7 @@
             android:layout_marginLeft="32dp"
             android:layout_marginTop="100dp"
             android:text="Explore"
-            android:textColor="#000"
+            android:textColor="#fff"
             android:textSize="32sp"
             android:textStyle="bold" />
 
@@ -53,6 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingLeft="@dimen/normalPadding"
+                android:background="@color/bg1main"
 
                 android:paddingRight="@dimen/normalPadding">
 
@@ -63,6 +67,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
+                    android:textColor="#fff"
                     android:text="Find your \nmatches persons"
                     android:textSize="28sp"
 
@@ -86,7 +91,7 @@
                     android:layout_marginTop="@dimen/normalPadding"
                     android:layout_marginBottom="@dimen/normalPadding"
                     android:text="10 course available"
-                    android:textColor="@color/contentTextColor"
+                    android:textColor="#fff"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_find_title" />
 
@@ -137,6 +142,7 @@
                             style="@style/viewParent.headerText"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textColor="#fff"
                             android:layout_marginTop="@dimen/activity_horizontal_margin"
                             android:layout_marginBottom="@dimen/activity_horizontal_margin"
                             android:text="Popular Persons" />
