--- a/app/src/main/res/layout/item_popular_person_playing.xml
+++ b/app/src/main/res/layout/item_popular_person_playing.xml
@@ -36,6 +36,7 @@
             android:fontFamily="@font/bariol_regular"
             android:textSize="20sp"
             android:text="Design Basic"
+            android:textColor="#fff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
