--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -91,6 +91,7 @@
     <color name="orange">#FE940D</color>
     <color name="green">#00FF00</color>
     <color name="dark_blue">#5d3369</color>
+    <color name="coolor">#C7F459</color>
 
     <color name="grey_light">#59CFCFCF</color>
     <color name="red_light">#33D32F2F</color>
