--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -37,6 +37,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Send"
+            android:background="@color/coolor"
             android:id="@+id/send"/>
     </LinearLayout>
 
