--- a/app/src/main/res/layout/card_popular_persons.xml
+++ b/app/src/main/res/layout/card_popular_persons.xml
@@ -6,7 +6,7 @@
     app:cardElevation="@dimen/card_itemcourse_elevation"
     android:background="@color/bg1main"
 
-    app:cardBackgroundColor="#FF402D"
+    app:cardBackgroundColor="@color/coolor"
     app:cardCornerRadius="16dp"
     android:layout_marginRight="20dp"
     android:layout_marginTop="20dp"
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="App Developer"
-            android:textColor="@color/white"
+            android:textColor="@color/coolor2"
             android:textSize="16sp"
             android:textStyle="bold"
             android:layout_marginBottom="10dp"/>
