--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:layout_margin="10dp"
+
     android:padding="5dp"
     android:background="@color/bg1main"
 
@@ -33,7 +33,7 @@
             android:layout_marginLeft="32dp"
             android:layout_marginTop="100dp"
             android:text="Explore"
-            android:textColor="#fff"
+            android:textColor="@color/coolor"
             android:textSize="32sp"
             android:textStyle="bold" />
 
@@ -48,7 +48,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
 
-            android:background="@color/contentBodyColor"
             android:padding="@dimen/nav_header_vertical_spacing">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -90,7 +89,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/normalPadding"
                     android:layout_marginBottom="@dimen/normalPadding"
-                    android:text="10 course available"
+                    android:text="10 matchs available"
                     android:textColor="#fff"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_find_title" />
@@ -145,7 +144,7 @@
                             android:textColor="#fff"
                             android:layout_marginTop="@dimen/activity_horizontal_margin"
                             android:layout_marginBottom="@dimen/activity_horizontal_margin"
-                            android:text="Popular Persons" />
+                            android:text="Latest match's" />
 
                         <TextView
                             style="@style/viewParent.headerText"
@@ -154,6 +153,7 @@
                             android:layout_alignParentEnd="true"
                             android:layout_marginTop="@dimen/activity_horizontal_margin"
                             android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                            android:textColor="@color/coolor"
                             android:text=". ." />
                     </RelativeLayout>
 
