--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,7 +41,7 @@
         <item name="android:maxLength">15</item>
         <item name="android:inputType">textCapSentences</item>
         <item name="android:textColorHint">#80999999</item>
-        <item name="android:textColor">#000</item>
+        <item name="android:textColor">@color/coolor</item>
     </style>
 
 <!--
